# forecast

./: Cargo.toml
src/: error.rs  fetcher.rs  main.rs
